<resources>
    <string name="app_name">EasyPrint</string>
    <string name="button_name">search devices</string>
    <string name="button_name2">turn on Bluetooth</string>
    <string name="list_view_bonded">bonded devices</string>
    <string name="list_view_unbonded">unbonded devices</string>
    <string name="go_back">return</string>
    <string name="no_connection">no paired devices</string>
    <string name="connected">device paired</string>
    <string name="bt_print">print</string>
    <string name="bt_command">command</string>
</resources>
