<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/openBluetooth_tb"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:layout_marginTop="5dp"
            android:text="@string/button_name2" />

        <Button
            android:id="@+id/searchDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/openBluetooth_tb"
            android:layout_marginTop="20dp"
            android:text="@string/button_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/searchDevices"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="125dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_view_unbonded" />

            <ListView
                android:id="@+id/unbondDevices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/searchDevices"
            android:layout_marginTop="160dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="288dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_view_bonded" />
            <ListView
                android:id="@+id/bondDevices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/linearLayout1" >
            </ListView>
        </LinearLayout>

        <Button
            android:id="@+id/return_Bluetooth_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/searchDevices"
            android:layout_alignParentLeft="true"
            android:text="@string/go_back" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>